@@ -7,6 +7,9 @@
 * + threshold as part of OCR process
 * Fix bug saving encoded characters in hOCR
 * Fix bug saving defaults that are not part of a profile
+* Add scrollbars to the 'Page Options' tab to make the scan button visible on
+  screens that are shorter than the scan dialog.
+  Closes bug #188 'Scan Document dialogue too big'
 
 
 1.2.6 (27.09.2014):
